basic filesystemwatcher implementation

--- a/FileIOClient/MainWindow.xaml
+++ b/FileIOClient/MainWindow.xaml
@@ -39,7 +39,7 @@
                 <ComboBoxItem>Method3</ComboBoxItem>
                 <ComboBoxItem>Method4</ComboBoxItem>
             </ComboBox>
-            <Label Grid.Row="4" Grid.Column="3" VerticalContentAlignment="Center">saved results ph</Label>
+            <Label Grid.Row="4" Grid.Column="3" Grid.ColumnSpan="3" VerticalContentAlignment="Center">saved results ph</Label>
 
         </Grid>
 
