--- a/FileIOClient/MainWindow.xaml
+++ b/FileIOClient/MainWindow.xaml
@@ -24,7 +24,7 @@
                 <ColumnDefinition/>
 
             </Grid.ColumnDefinitions>
-            <Button Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" Margin="10">Method1</Button>
+            <Button Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" Margin="10" Click="Button_Click">Method1</Button>
             <Button Grid.Row="0" Grid.Column="3" Grid.ColumnSpan="3" Margin="10">Method2</Button>
             <Button Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3" Margin="10">Method3</Button>
             <Button Grid.Row="1" Grid.Column="3" Grid.ColumnSpan="3" Margin="10">Method4</Button>
