--- a/FileIOClient/MainWindow.xaml
+++ b/FileIOClient/MainWindow.xaml
@@ -24,8 +24,8 @@
                 <ColumnDefinition/>
 
             </Grid.ColumnDefinitions>
-            <Button Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" Margin="10" Click="Button_Click">Method1</Button>
-            <Button Grid.Row="0" Grid.Column="3" Grid.ColumnSpan="3" Margin="10">Method2</Button>
+            <Button Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" Margin="10" Click="TaskButton_Click">Task</Button>
+            <Button Grid.Row="0" Grid.Column="3" Grid.ColumnSpan="3" Margin="10" Click="ParaForButton_Click">Parallel.For</Button>
             <Button Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3" Margin="10">Method3</Button>
             <Button Grid.Row="1" Grid.Column="3" Grid.ColumnSpan="3" Margin="10">Method4</Button>
 
