--- a/PiClient/MainWindow.xaml
+++ b/PiClient/MainWindow.xaml
@@ -13,6 +13,7 @@
             <RowDefinition Height="2*"/>
             <RowDefinition Height="1*"/>
             <RowDefinition Height="1*"/>
+            <RowDefinition Height="1*"/>
 
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
@@ -25,12 +26,12 @@
         </Grid.ColumnDefinitions>
         <Label Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Content="Number of Digits:" HorizontalContentAlignment="right"/>
         <TextBox Grid.Row="0" Grid.Column="2" Grid.ColumnSpan="4" Margin="5 2 5 2" Name="txDigits"></TextBox>
-        
+
         <Button Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Margin="10"  Click="btnBgWorker_Click" >BackgroundWorker</Button>
         <Button Grid.Row="1" Grid.Column="2" Grid.ColumnSpan="2" Margin="10"  Click="btnTask_Click">Task</Button>
         <Button Grid.Row="1" Grid.Column="4" Grid.ColumnSpan="2" Margin="10"  Click="test" >test</Button>
-        <Button Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3" Margin="10">method4</Button>
-        <Button Grid.Row="2" Grid.Column="3" Grid.ColumnSpan="3" Margin="10">method5</Button>
+        <Button Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" Margin="10"  Click="btnThreadPool_Click">ThreadPool</Button>
+        <Button Grid.Row="2" Grid.Column="2" Grid.ColumnSpan="2" Margin="10"  Click="btnParallelFor_Click">Parallel.For</Button>
 
         <Button Grid.Row="3" Grid.Column="0" Margin="5" Click="SaveButton_Click">Save</Button>
         <Label Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="5" Name="lbPerformance" VerticalContentAlignment="Center">current results ph</Label>
@@ -43,7 +44,7 @@
             <ComboBoxItem>Method4</ComboBoxItem>
             <ComboBoxItem>Method5</ComboBoxItem>
         </ComboBox>
-        <Label Grid.Row="4" Grid.Column="3" Grid.ColumnSpan="3" VerticalContentAlignment="Center"> saved results ph</Label>
+        <Label Grid.Row="4" Grid.Column="3" Grid.ColumnSpan="3" VerticalContentAlignment="Center">saved results ph</Label>
 
     </Grid>
 </Window>
