--- a/FileIOClient/MainWindow.xaml
+++ b/FileIOClient/MainWindow.xaml
@@ -30,7 +30,7 @@
             <Button Grid.Row="1" Grid.Column="3" Grid.ColumnSpan="3" Margin="10" Click="ParaTaskButton_Click">Parallel Task</Button>
 
             <Button Grid.Row="2" Grid.Column="0" Margin="5" Click="SaveButton_Click">Save</Button>
-            <Label Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="5" Name="lbPerformance" VerticalContentAlignment="Center">current results ph</Label>
+            <Label Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="5" Name="lbPerformance" VerticalContentAlignment="Center"></Label>
 
             <Button Grid.Row="3" Grid.Column="0" Margin="5">Retrieve</Button>
             <ComboBox Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="2" Margin="2" VerticalAlignment="Center">
@@ -39,7 +39,7 @@
                 <ComboBoxItem>Method3</ComboBoxItem>
                 <ComboBoxItem>Method4</ComboBoxItem>
             </ComboBox>
-            <Label Grid.Row="4" Grid.Column="3" Grid.ColumnSpan="3" VerticalContentAlignment="Center">saved results ph</Label>
+            <Label Grid.Row="4" Grid.Column="3" Grid.ColumnSpan="3" VerticalContentAlignment="Center"></Label>
 
         </Grid>
 
