--- a/PiClient/MainWindow.xaml
+++ b/PiClient/MainWindow.xaml
@@ -13,7 +13,6 @@
             <RowDefinition Height="2*"/>
             <RowDefinition Height="1*"/>
             <RowDefinition Height="1*"/>
-            <RowDefinition Height="1*"/>
 
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
@@ -35,7 +34,7 @@
         <Button Grid.Row="2" Grid.Column="3" Grid.ColumnSpan="2" Margin="10"  Click="btnParallelFor_Click">Parallel.For</Button>
 
         <Button Grid.Row="3" Grid.Column="0" Margin="5" Click="SaveButton_Click">Save</Button>
-        <Label Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="5" Name="lbPerformance" VerticalContentAlignment="Center">current results ph</Label>
+        <Label Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="5" Name="lbPerformance" VerticalContentAlignment="Center"></Label>
 
         <Button Grid.Row="4" Grid.Column="0" Margin="5">Retrieve</Button>
         <ComboBox Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="2" Margin="2" VerticalAlignment="Center">
@@ -45,7 +44,7 @@
             <ComboBoxItem>Method4</ComboBoxItem>
             <ComboBoxItem>Method5</ComboBoxItem>
         </ComboBox>
-        <Label Grid.Row="4" Grid.Column="3" Grid.ColumnSpan="3" VerticalContentAlignment="Center">saved results ph</Label>
+        <Label Grid.Row="4" Grid.Column="3" Grid.ColumnSpan="3" VerticalContentAlignment="Center"></Label>
 
     </Grid>
 </Window>
