--- a/PiClient/MainWindow.xaml
+++ b/PiClient/MainWindow.xaml
@@ -37,7 +37,7 @@
         <Button Grid.Row="3" Grid.Column="0" Margin="5" Click="SaveButton_Click">Save</Button>
         <Label Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="5" Name="lbPerformance" VerticalContentAlignment="Center">current results ph</Label>
 
-        <Button Grid.Row="4" Grid.Column="0" Margin="5">Retrieve</Button>
+        <Button Grid.Row="4" Grid.Column="0" Margin="5" Click="Button_Click">Retrieve</Button>
         <ComboBox Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="2" Margin="2" VerticalAlignment="Center">
             <ComboBoxItem IsSelected="True">Method1</ComboBoxItem>
             <ComboBoxItem>Method2</ComboBoxItem>
@@ -45,7 +45,7 @@
             <ComboBoxItem>Method4</ComboBoxItem>
             <ComboBoxItem>Method5</ComboBoxItem>
         </ComboBox>
-        <Label Grid.Row="4" Grid.Column="3" Grid.ColumnSpan="3" VerticalContentAlignment="Center">saved results ph</Label>
+        <Label x:Name="labelretrieve" Grid.Row="4" Grid.Column="3" Grid.ColumnSpan="3" VerticalContentAlignment="Center">saved results ph</Label>
 
     </Grid>
 </Window>
